--- a/src/main/webapp/mobile/auditor/case/case_cells.html
+++ b/src/main/webapp/mobile/auditor/case/case_cells.html
@@ -41,7 +41,7 @@
     <div class="weui-cells weui-cells_form">
         <div class="weui-cell">
             <div class="weui-cell__bd weui_cell_primary name">
-                <input id="input" class="weui-input" type="text" placeholder="输入距离(米)名称或许可证号" />
+                <input id="input" class="weui-input" type="text" placeholder="" />
             </div class="weui-cell__bd weui_cell_primary name">
             <a href="javascript:;" id="search" class="weui-btn weui-btn_mini weui-btn_primary">查询</a>
         </div>
