--- a/src/main/webapp/mobile/auditor/case/caseDetail.html
+++ b/src/main/webapp/mobile/auditor/case/caseDetail.html
@@ -161,6 +161,15 @@
 			<!-- </div> -->
 		</div>
 
+		<div class="weui-cells weui-cells_form">
+			<div class="weui-cell weui-cell_switch">
+				<div class="weui-cell__bd">是否重点检查</div>
+				<div class="weui-cell__ft">
+					<input class="weui-switch" id="check" type="checkbox">
+				</div>
+			</div>
+		</div>
+
 
 		<div class="weui-cells weui-cells_form">
 			<div class="weui-cell weui-cell_access" onclick="clickEvent();">
@@ -250,34 +259,56 @@
 		}
 	}
 
-	function keyDown(e) {
-		var keycode = e.which;   //取得对应的键值（数字）  	  
-		var realkey = String.fromCharCode(e.which); //取得代表改键的真正字符  
-		var val = document.getElementById("input").value;
-		if (keycode == 13) {
-			local.search(val);
+	$('#check').click(function () {
+		// console.log($('#check').checked);
+		var state;
+		if ($('#check').prop('checked')) {
+			console.log('1');
+			state=1;
+		} else {
+			console.log('2');
+			state=0;
 		}
-	}
+		
+		$.get("../../user/updateWeight.do", {
+			license: license,
+			state : state,
+			lng: longitude,
+			lat: latitude
+		}, function (data) {
+		
+			if(data<1){
+				alert("操作失败");
+			}
+			
+		});
+		
+	})
+	
 	function init(data) {
 		console.log(data);
 		$('#address').html(data.roomInfo.address);
 		$('#name').html(data.roomInfo.name);
+		if (data.roomInfo.weight == 1) {
+			 $('#check').prop("checked", "true");			
+		}
+
 		if (data.crimal != null && data.crimal != "") {
 			for (let index = 0; index < data.lawCases.length; index++) {
 				var html = ' <div style="display:none weui-cells" class="weui-panel menu_body">' +
 					'<div class="weui-panel__bd">' +
 					'<div class="weui-media-box weui-media-box_text">' +
-					'<h4 class="weui-media-box__title">' + "录入人 : "+data.lawCases[index].user_name + '</h4>' +
+					'<h4 class="weui-media-box__title">' + "录入人 : " + data.lawCases[index].user_name + '</h4>' +
 					'<p class="weui-media-box__desc" style="color:red">' + data.lawCases[index].criminal_content + '</p>' +
 					'<ul class="weui-media-box__info">' +
-					'<li class="weui-media-box__info__meta">' +"录入时间 : "+ actionTime(data.lawCases[index].criminal_time) + '</li>' +
+					'<li class="weui-media-box__info__meta">' + "录入时间 : " + actionTime(data.lawCases[index].criminal_time) + '</li>' +
 					'</ul>' +
 					'</div>' +
 					'</div>'
 				$('.menu_list').append(html);
 			}
 		} else {
-			$('.weui-flex p').css('display','block');
+			$('.weui-flex p').css('display', 'block');
 			// var hidden = document.createElement("div");
 			// hidden.setAttribute("class", "weui-cell__bd");
 			// var span1 = document.createElement("span");
