--- a/src/main/webapp/mobile/auditor/position/businessMap.html
+++ b/src/main/webapp/mobile/auditor/position/businessMap.html
@@ -336,7 +336,8 @@
 		var points = []; // 添加海量点数据
 		var points1 = [];
 		var points2 = [];
-		var pointCollection, pointCollection1, pointCollection2;
+		var points0 = [];
+		var pointCollection, pointCollection1, pointCollection2, pointCollection0;
 
 		//默认颜色
 		var options1 = {
@@ -348,7 +349,7 @@
 		var options2 = {
 			size: BMAP_POINT_SIZE_SMALL,
 			shape: BMAP_POINT_SHAPE_STAR,
-			color: '#1e88e5'
+			color: '#2962ff'
 		}
 		//案由点位颜色
 		var options3 = {
@@ -356,81 +357,93 @@
 			shape: BMAP_POINT_SHAPE_STAR,
 			color: '#FF9933'
 		}
-		//两个以上颜色
+		//多案由颜色
 		var options4 = {
 			size: BMAP_POINT_SIZE_SMALL,
 			shape: BMAP_POINT_SHAPE_STAR,
 			color: '#FF0000'
 		}
-		for (var i = 0; i < ticket.length; i++) {
-			if (ticket[i].criminal_number == 0) {
-				points.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
-				pointCollection = new BMap.PointCollection(points, options1);
-			} else if (ticket[i].criminal_number == 1) {
-				points1.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
-				pointCollection1 = new BMap.PointCollection(points1, options3);
-			} else if (ticket[i].criminal_number > 1) {
-				points2.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
-				pointCollection2 = new BMap.PointCollection(points2, options4);
-			}
-			// if (yit.length > 0 && any.length == 0) {
-			// 	var pointCollection = new BMap.PointCollection(points, options2); // 初始化PointCollection
-			// }
-			// else if (any.length > 0 && yit.length == 0) {
-			// 	var pointCollection = new BMap.PointCollection(points, options3); // 初始化PointCollection
-			// }
-			// else if (any.length > 0 && yit.length > 0) {
-			// 	var pointCollection = new BMap.PointCollection(points, options4); // 初始化PointCollection
-			// } else {
-			// 	var pointCollection = new BMap.PointCollection(points, options1); // 初始化PointCollection
-			// }
-			//自定义属性存放license
-			// pointCollection.customData = { license: ticket[i].license };
-
-			// console.log("数据:" + pointCollection.customData.license);
+		//重点检查颜色
+		var options5 = {
+			size: BMAP_POINT_SIZE_SMALL,
+			shape: BMAP_POINT_SHAPE_STAR,
+			color: '#0000FF'
 		}
-		if (pointCollection != null) {
 
-			pointCollection.addEventListener('click', function (e) {
+		console.log(ticket);
+		
+		for (var i = 0; i < ticket.length; i++) {
+			if(ticket[i].weight==1){
+				points0.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
+				pointCollection0 = new BMap.PointCollection(points0, options5);
+			}else{
+				if (ticket[i].criminal_number == 0) {
+					points.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
+					pointCollection = new BMap.PointCollection(points, options1);
+				} else if (ticket[i].criminal_number == 1) {
+					points1.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
+					pointCollection1 = new BMap.PointCollection(points1,options3);
+				} else if (ticket[i].criminal_number > 1) {
+					points2.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
+					pointCollection2 = new BMap.PointCollection(points2,options4);
+				}
+			}
+
+		}
+
+		if (pointCollection != null) {
+			pointCollection.addEventListener('click', function(e) {
 				$.get("../../../baiduMap/getLicenseGUIDByPosition.do", {
-					lng: e.point.lng,
-					lat: e.point.lat
-				}, function (text) {
+					lng : e.point.lng,
+					lat : e.point.lat
+				}, function(text) {
 					var data = JSON.parse(text);
 					location.href = "../case/caseDetail.html?license="
-						+ data.license + "&longitude=" + e.point.lng
-						+ "&latitude=" + e.point.lat;
+							+ data.license + "&longitude=" + lng + "&latitude="
+							+ lat;
 				});
 
 			})
 		}
-
 
 		if (pointCollection1 != null) {
-			pointCollection1.addEventListener('click', function (e) {
+			pointCollection1.addEventListener('click', function(e) {
 				$.get("../../../baiduMap/getLicenseGUIDByPosition.do", {
-					lng: e.point.lng,
-					lat: e.point.lat
-				}, function (text) {
+					lng : e.point.lng,
+					lat : e.point.lat
+				}, function(text) {
 					var data = JSON.parse(text);
 					location.href = "../case/caseDetail.html?license="
-						+ data.license + "&longitude=" + e.point.lng
-						+ "&latitude=" + e.point.lat;
+							+ data.license + "&longitude=" + lng + "&latitude="
+							+ lat;
 				});
 			})
 		}
 
-
 		if (pointCollection2 != null) {
-			pointCollection2.addEventListener('click', function (e) {
+			pointCollection2.addEventListener('click', function(e) {
 				$.get("../../../baiduMap/getLicenseGUIDByPosition.do", {
-					lng: e.point.lng,
-					lat: e.point.lat
-				}, function (text) {
+					lng : e.point.lng,
+					lat : e.point.lat
+				}, function(text) {
 					var data = JSON.parse(text);
 					location.href = "../case/caseDetail.html?license="
-						+ data.license + "&longitude=" + e.point.lng
-						+ "&latitude=" + e.point.lat;
+							+ data.license + "&longitude=" + lng + "&latitude="
+							+ lat;
+				});
+			})
+		}
+
+		if (pointCollection0 != null) {
+			pointCollection0.addEventListener('click', function(e) {
+				$.get("../../../baiduMap/getLicenseGUIDByPosition.do", {
+					lng : e.point.lng,
+					lat : e.point.lat
+				}, function(text) {
+					var data = JSON.parse(text);
+					location.href = "../case/caseDetail.html?license="
+							+ data.license + "&longitude=" + lng + "&latitude="
+							+ lat;
 				});
 			})
 		}
@@ -438,26 +451,10 @@
 		map.addOverlay(pointCollection); // 添加Overlay
 		map.addOverlay(pointCollection1); // 添加Overlay
 		map.addOverlay(pointCollection2); // 添加Overlay
+		map.addOverlay(pointCollection0); // 添加Overlay
 
 	}
 
-	//获取覆盖物位置
-	function attribute(e) {
-		var p = e.target;
-		var hidden_lng = p.getPosition().lng;
-		var hidden_lat = p.getPosition().lat;
-
-		$.get("../../baiduMap/getAssetGUIDByPosition.do", {
-			lng: hidden_lng,
-			lat: hidden_lat
-		}, function (data) {
-			var obj = $.parseJSON(data).roomInfo;
-			var assetGuid = encodeURI(obj.guid);
-			location.href = "assetDetail.html?guid=" + assetGuid + "&latitude="
-				+ lat + "&longitude=" + lng;
-		});
-
-	}
 
 	function getDistance(lng, lat) {
 		var pointA = new BMap.Point(longitude, latitude); // 创建点坐标A--大渡口区
